<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.datagrandeur.neuropsych.WelcomeActivity">

    <TextView
        android:id="@+id/text_instruction"
        android:layout_width="900dp"
        android:layout_height="350dp"
        android:background="@color/app_theme"
        android:fontFamily="sans-serif-black"
        android:textColor="@android:color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/pump_info"
        android:layout_width="783dp"
        android:layout_height="136dp"


        android:text="@string/pump"
        android:textColor="@android:color/white"
        android:textSize="40dp"
        android:visibility="gone"



        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"

        android:fontFamily="sans-serif-black"
        android:text="@string/next_button"
        android:textColor="@android:color/black"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instruction"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Game_info1"
        android:layout_width="678dp"
        android:layout_height="124dp"


        android:text="@string/game_info1"
        android:textColor="@color/white"
        android:visibility="gone"


        android:textSize="40dp"


        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/txt_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_game"
        android:textColor="@color/app_theme_light"
        android:textSize="40dp"




        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction" />

    <TextView
        android:id="@+id/txt_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_info1"
        android:textColor="@color/app_theme_light"
        android:textSize="35dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction" />

    <TextView
        android:id="@+id/txt_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:text="@string/txt_info2"
        android:textColor="@color/app_theme_light"
        android:textSize="40dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/txt_info3"
        android:layout_width="880dp"
        android:layout_height="220dp"
        android:text="@string/txt_info3"
        android:textColor="@color/app_theme_light"
        android:textSize="40dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/txt_info4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_info4"
        android:textColor="@color/app_theme_light"
        android:textSize="40dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction"
        app:layout_constraintVertical_bias="0.401" />

    <TextView
        android:id="@+id/txt_info5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_info5"
        android:textColor="@color/app_theme_light"
        android:textSize="40dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction" />

    <TextView
        android:id="@+id/txt_info6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_info6"
        android:textColor="@color/app_theme_light"
        android:textSize="40dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction" />

    <TextView
        android:id="@+id/txt_info7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_info7"
        android:textColor="@color/app_theme_light"
        android:textSize="40dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction" />

    <TextView
        android:id="@+id/txt_info8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_info8"
        android:textColor="@color/app_theme_light"
        android:textSize="40dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="@+id/text_instruction"
        app:layout_constraintStart_toStartOf="@+id/text_instruction"
        app:layout_constraintTop_toTopOf="@+id/text_instruction" />

    <TextView
        android:id="@+id/txtGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"

        android:fontFamily="sans-serif-black"
        android:text="@string/txt_back"
        android:textColor="@color/black"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instruction" />

    <Button
        android:id="@+id/btnPump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="580dp"
        android:layout_marginTop="20dp"
        android:text="PUMP"
        android:textColor="@color/app_theme"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balloon_view"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/balloon_view"
        android:layout_width="199dp"
        android:layout_height="233dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/balloon"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>